--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -667,7 +667,10 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YeW-XV-jnO">
-                                <rect key="frame" x="159" y="456" width="145" height="44"/>
+                                <rect key="frame" x="159" y="456" width="0.0" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" id="fUP-ok-0oM"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <state key="normal" title="Send Code By E-mail">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -707,7 +710,6 @@
                             <constraint firstAttribute="bottom" secondItem="pLY-Hy-s92" secondAttribute="bottom" constant="50" id="Aqd-vl-MAS"/>
                             <constraint firstItem="1WV-tm-CdX" firstAttribute="top" secondItem="kgT-HR-91V" secondAttribute="top" constant="108" type="user" id="AzY-Iv-EwT"/>
                             <constraint firstItem="Idg-VU-QdN" firstAttribute="top" secondItem="1WV-tm-CdX" secondAttribute="bottom" constant="15" type="user" id="Mhf-nz-CGy"/>
-                            <constraint firstItem="YeW-XV-jnO" firstAttribute="trailing" secondItem="kgT-HR-91V" secondAttribute="trailingMargin" type="user" id="OLt-5H-4uJ"/>
                             <constraint firstItem="3mD-RK-YlA" firstAttribute="leading" secondItem="4gT-xq-028" secondAttribute="leading" type="user" id="OzX-p0-yXG"/>
                             <constraint firstItem="pLY-Hy-s92" firstAttribute="baseline" secondItem="YeW-XV-jnO" secondAttribute="baseline" type="user" id="Qb6-hS-HVt"/>
                             <constraint firstItem="ycT-QG-lSi" firstAttribute="top" secondItem="4gT-xq-028" secondAttribute="top" type="user" id="RPT-jN-xHZ"/>
