--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -666,23 +666,6 @@
                                     <constraint firstAttribute="height" constant="128" type="user" id="SNm-oE-yEO"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YeW-XV-jnO">
-                                <rect key="frame" x="159" y="456" width="0.0" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" id="fUP-ok-0oM"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                <state key="normal" title="Send Code By E-mail">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="sendCodeByEmail:" destination="zpB-t8-h45" eventType="touchUpInside" id="lgI-iv-Acu"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K95-LF-edS">
                                 <rect key="frame" x="111" y="456" width="83" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -700,6 +683,23 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ycT-QG-lSi">
                                 <rect key="frame" x="150" y="280" width="20" height="20"/>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YeW-XV-jnO">
+                                <rect key="frame" x="180" y="456" width="124" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="124" id="D9T-Ad-bnO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <state key="normal" title="Send Code By E-mail">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendCodeByEmail:" destination="zpB-t8-h45" eventType="touchUpInside" id="lgI-iv-Acu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -715,7 +715,6 @@
                             <constraint firstItem="ycT-QG-lSi" firstAttribute="top" secondItem="4gT-xq-028" secondAttribute="top" type="user" id="RPT-jN-xHZ"/>
                             <constraint firstAttribute="centerX" secondItem="K95-LF-edS" secondAttribute="centerX" constant="7.5" type="user" id="S85-j6-jZj"/>
                             <constraint firstItem="4gT-xq-028" firstAttribute="leading" secondItem="kgT-HR-91V" secondAttribute="leadingMargin" constant="24" type="user" id="UU9-oZ-e9L"/>
-                            <constraint firstItem="YeW-XV-jnO" firstAttribute="leading" secondItem="kgT-HR-91V" secondAttribute="leading" constant="159" type="user" id="Xa3-B6-IVg"/>
                             <constraint firstItem="3mD-RK-YlA" firstAttribute="leading" secondItem="kgT-HR-91V" secondAttribute="leading" constant="40" type="user" id="Xlk-ye-9qY"/>
                             <constraint firstItem="pLY-Hy-s92" firstAttribute="leading" secondItem="kgT-HR-91V" secondAttribute="leadingMargin" type="user" id="Yqv-aP-YHq"/>
                             <constraint firstItem="Idg-VU-QdN" firstAttribute="top" secondItem="kgT-HR-91V" secondAttribute="top" constant="144" type="user" id="a4Q-MK-lK4"/>
@@ -732,6 +731,7 @@
                             <constraint firstItem="K95-LF-edS" firstAttribute="top" secondItem="YeW-XV-jnO" secondAttribute="top" type="default" id="r4q-h7-msE"/>
                             <constraint firstItem="ycT-QG-lSi" firstAttribute="centerX" secondItem="4gT-xq-028" secondAttribute="centerX" type="default" id="rBa-94-6un"/>
                             <constraint firstItem="ycT-QG-lSi" firstAttribute="centerX" secondItem="LNp-4T-ubq" secondAttribute="centerX" type="default" id="sDa-MF-Lvh"/>
+                            <constraint firstAttribute="trailing" secondItem="YeW-XV-jnO" secondAttribute="trailing" constant="16" id="ziA-N6-eDj"/>
                         </constraints>
                     </view>
                     <connections>
